@@ -1,3 +1,8 @@
+TAG: littriageload-6-0-17-12
+DATE: 09/14/2021
+STAFF: lec
+wts2-685/Secondary triage script for auto-Routing for Tumor needs adjusting
+
 TAG: littriageload-6-0-17-11
 DATE: 07/26/2021
 STAFF: lec
